--- a/src/events/events.css
+++ b/src/events/events.css
@@ -1,8 +1,3 @@
-/* EVENTS CONTAINER */
-#events-section-container {
-    overflow: scroll;
-}
-
 /* MODAL */
 #modal-background {
     position: fixed;
@@ -26,7 +21,16 @@
     display: flex;
 }
 
+/* EVENTS CONTAINER */
+#events-container {
+    min-width: 278px;
+}
+
 /* EVENT SECTIONS */
+#events-section-container {
+    overflow: scroll;
+}
+
 .event-section-title {
     margin-bottom: 8px;
 }
